--- a/receive-complaint.html
+++ b/receive-complaint.html
@@ -314,13 +314,19 @@
                       <td>
                         <img src="https://res.cloudinary.com/syfon/image/upload/v1572360659/logo2.png" class="img-responsive logo-image">
                         <hr>
-                        <h2>Verify your Email Address</h2>
+                        <h2>Your Complaint has been Received </h2>
 
-                        <img src="https://res.cloudinary.com/syfon/image/upload/v1572361308/verify.png" class="vector">
+                        <img src="https://res.cloudinary.com/syfon/image/upload/v1572367210/complaint_mail.png"
+                          class="vector">
 
                       <h3>Hi Sifon,</h3>
-                          <p>
-                        Please verify your email address by clicking the button below.</p>
+                         <p> We’re sending this email to let you know that we have received the complaint you made on
+                           (date and time) regarding (issue)
+                          </p>
+
+                         <p>We’d like to reassure you that we are on top of this, and it will be resolved very soon.</p>
+
+                         <p>Thank you for your patience.</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-success">
                           <tbody>
                           <tr>
