--- a/feedback-client.html
+++ b/feedback-client.html
@@ -409,7 +409,7 @@
                               <table border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                   <tr>
-                                    <td> <a href="" target="_blank">Back to Site</a> </td>
+                                    <td> <a href="https://www.kiitec.com/" target="_blank">Back to Site</a> </td>
                                   </tr>
 
                                 </tbody>
