--- a/feedback-vendor.html
+++ b/feedback-vendor.html
@@ -408,7 +408,7 @@
                               <table border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                   <tr>
-                                    <td> <a href="" target="_blank">Back to Site</a> </td>
+                                    <td> <a href="https://www.vendor.kiitec.com/" target="_blank">Back to Site</a> </td>
                                   </tr>
 
                                 </tbody>
