--- a/receive-complaint.html
+++ b/receive-complaint.html
@@ -334,7 +334,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="" target="_blank">Verify Email</a> </td>
+                                      <td> <a href="https://www.kiitec.com/" target="_blank">Back to Site</a> </td>
                                     </tr>
                                     
                                   </tbody>
