--- a/reject-email.html
+++ b/reject-email.html
@@ -411,7 +411,7 @@
                               <table border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                   <tr>
-                                    <td> <a href="" target="_blank">Back to site</a> </td>
+                                    <td> <a href="https://www.vendor.kiitec.com/" target="_blank">Back to site</a> </td>
                                   </tr>
 
                                 </tbody>
