--- a/resolve-complaint.html
+++ b/resolve-complaint.html
@@ -333,7 +333,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="" target="_blank">Verify Email</a> </td>
+                                      <td> <a href="https://www.kiitec.com/" target="_blank">Back to site</a> </td>
                                     </tr>
                                     
                                   </tbody>
